--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Joaquin López</title>
+  <title>Irene Sánchez</title>
   <link rel="stylesheet" href="css/estilos.css">
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
   <link rel="icon" href="favicon.ico">
@@ -13,8 +13,8 @@
   <div class="top-container">
     <img class="top-cloud" src="imagenes/cloud.png" alt="cloud">
     <div class="title-text">
-      <h1>Hola, soy Joaquin.</h1>
-      <h2>un <span class="pro">pro</span>fesor de informática.</h2>
+      <h1>Hola, soy Irene.</h1>
+      <h2>una <span class="pro">a</span>lumna .</h2>
     </div>
     <img class="bottom-cloud" src="imagenes/cloud.png" alt="cloud">
     <img class="mountain" src="imagenes/mountain.png" alt="mountain-img">
@@ -24,7 +24,7 @@
     <div class="profile">
       <img src="imagenes/joaquin.png" alt="angela-profile-img">
       <h2>Hola.</h2>
-      <p class="intro">Soy profesor de informática de educación secundaria. Trabajo en el IES Penyagolosa. Me ❤️ los ordenadores y el deporte.</p>
+      <p class="intro">me gustan los videojuegos y el deporte sobre todo el fútbol.</p>
     </div>
     <hr>
     <div class="skills">
@@ -32,23 +32,23 @@
       <div class="skill-row">
         <img class="code-img" src="https://media.giphy.com/media/WFZvB7VIXBgiz3oDXE/giphy.gif" alt="imagen programación">
 
-        <h3>Programación</h3>
-        <p>Empecé a aprender a programar cuando tenía 18 años porque quería estudiar informática. Empecé con Pascal pero con el tiempo he ido aprendiendo otros lenguajes.</p>
+        <h3>Fútbol</h3>
+        <p>Empecé a a jugar a fútbol con dos años mientras mi hermano jugaba con su equipo,hasta que me apunte a un equipo y ,a los 7 años me ficho el Villareal y este año hago 10 años jugando en el Villareal.</p>
         
       </div>
       <div class="skill-row">
         <br><br>
         <img class="iot-img" src="imagenes/iot.png" alt="imagen IoT">
 
-        <h3>IoT</h3>
-        <p>Desde hace unos 8 años empecé a trabajar con arduino después raspberry pi, ESP286, LoRaWAN, etc. Junto con alumnos hemos presentado algunos proyectos a concursos y los hemos ganado :-).</p>
+        <h3>videojuegos </h3>
+        <p> :En mis ratos libres me gusta jugar a videojuegos .</p>
 
       </div>
       <div class="skill-row">
         <img class="bici-img" src="https://media.giphy.com/media/QKdZwNhXtIrqoMdjsh/giphy.gif" alt="imagen ciclismo">
 
-        <h3>Ciclismo</h3>
-        <p>Hace más de 25 años que practico ciclismo. Aunque tengo bici de carretera y de montaña, prefiero la de carretera ;-)</p>
+        <h3>editar en photoshop</h3>
+        <p> y cuándo no se que hacer me gusta coger fotos y editarlas</p>
 
       </div>
     </div>
@@ -63,10 +63,10 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://www.linkedin.com/">instagram</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
     <a class="footer-link" href="https://www.iespenyagolosa.es/">Sitio web</a>
-    <p class="copyright">© 2022 Joaquin López.</p>
+    <p class="copyright">© 2022 Irene Sánchez.</p>
   </div>
 </body>
 
