--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <div class="middle-container">
     <div class="profile">
-      <img src="imagenes/joaquin.png" alt="angela-profile-img">
+      <img src="imagenes/irene.png" alt="angela-profile-img">
       <h2>Hola.</h2>
       <p class="intro">me gustan los videojuegos y el deporte sobre todo el fútbol.</p>
     </div>
