--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="skills">
       <h2>Mis destrezas.</h2>
       <div class="skill-row">
-        <img class="code-img" src="https://media.giphy.com/media/WFZvB7VIXBgiz3oDXE/giphy.gif" alt="imagen programación">
+        <img class="code-img" src="imagenes/pelota.png" alt="imagen futbol">
 
         <h3>Fútbol</h3>
         <p>Empecé a a jugar a fútbol con dos años mientras mi hermano jugaba con su equipo,hasta que me apunte a un equipo y ,a los 7 años me ficho el Villareal y este año hago 10 años jugando en el Villareal.</p>
@@ -38,14 +38,14 @@
       </div>
       <div class="skill-row">
         <br><br>
-        <img class="iot-img" src="imagenes/iot.png" alt="imagen IoT">
+        <img class="iot-img" src="imagenes/mando.png" alt="imagen videojuegos">
 
         <h3>videojuegos </h3>
         <p> :En mis ratos libres me gusta jugar a videojuegos .</p>
 
       </div>
       <div class="skill-row">
-        <img class="bici-img" src="https://media.giphy.com/media/QKdZwNhXtIrqoMdjsh/giphy.gif" alt="imagen ciclismo">
+        <img class="bici-img" src="imagenes/photoshop.png" alt="imagen photoshop">
 
         <h3>editar en photoshop</h3>
         <p> y cuándo no se que hacer me gusta coger fotos y editarlas</p>
