--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="skills">
       <h2>Mis destrezas.</h2>
       <div class="skill-row">
-        <img class="code-img" src="imagenes/pelota.png" alt="imagen futbol">
+        <img class="code-img" src="imagenes/pelota.webp" alt="imagen futbol">
 
         <h3>Fútbol</h3>
         <p>Empecé a a jugar a fútbol con dos años mientras mi hermano jugaba con su equipo,hasta que me apunte a un equipo y ,a los 7 años me ficho el Villareal y este año hago 10 años jugando en el Villareal.</p>
